2008-09-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8985: Enable USER object to become USER_INT on the fly

2008-09-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8644: Usersettings with fullHelptextMode looks weird (thanks to Steffen Kamper)

2008-09-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9315: Description of tslib_fe::includeTCA is incorrect

2008-09-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9268: TCA is not loaded in FE when config cache is disabled

2008-09-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9312: felogin: uninitialized vars (Thanks to Steffen Kamper)
	* Fixed bug #9282: Allow subkeys for TypoScript "config." array

2008-09-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #8996: htmlArea RTE: link to file not updated when changing case in file name
	* Fixed bug #9022: Link-Icon stays grey while trying to link an image in ie7

2008-09-08  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #9281: Fixed typing error

2008-09-07  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #9285: Remove all @ in front of file_exists() calls
	* Fixed bug #9301: Missing colorization in Localization Overview of the page tree, credits Steffen Kamper

2008-09-06  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9302: Make functions in tslib_eidtools public static

2008-09-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9262: Adding counting classes to table rows/columns in RTE (thanks to Thorsten Krohn)
	* Fixed bug #9296: htmlArea RTE: remove upload form when element browser is in readOnly mode

2008-09-04  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9227: Group field in Flexforms with a single table does not show selected items

2008-09-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9263: Default icon for plugins in list_type select (thanks to Steffen Kamper)

2008-09-03  Jeff Segars  <jeff@webempoweredchurch.org>
